Add research page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 </div>
 <ul class="navbar" id="myNavbar">
   <li> <a {% if page.url == 'home' %} class="extra active" {% else %} class = "extra" {% endif %} href="{{ site.url }}">home</a> </li>
-  <!-- <li> <a {% if page.url == 'research' %} class="extra active" {% else %} class = "extra" {% endif %} href="{{ site.url }}/research">research</a> </li> -->
+  <li> <a {% if page.url == 'research' %} class="extra active" {% else %} class = "extra" {% endif %} href="{{ site.url }}/research">research</a> </li>
   <!-- <li> <a {% if page.url == 'publications' %} class="extra active" {% else %} class = "extra" {% endif %} href="{{ site.url }}/publications">publications</a> </li> -->
   <li> <a {% if page.url == 'teaching' %} class="extra active" {% else %} class = "extra" {% endif %} href="{{ site.url }}/teaching">teaching</a> </li>
   <li> <a {% if page.url == 'news' %} class="extra active" {% else %} class = "extra" {% endif %} href="{{ site.url }}/news">news</a> </li>
